k8s/security/vault.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault
  namespace: security
spec:
  serviceName: vault
  replicas: 3
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      serviceAccountName: vault
      securityContext:
        runAsNonRoot: true
        runAsGroup: 1000
        runAsUser: 100
        fsGroup: 1000
      containers:
      - name: vault
        image: vault:1.15.1
        imagePullPolicy: IfNotPresent
        command:
        - "/bin/sh"
        - "-ec"
        args:
        - |
          cp /vault/config/vault.hcl /tmp/vault.hcl
          sed -Ei "s/POD_IP/${POD_IP?}/g" /tmp/vault.hcl
          /usr/local/bin/docker-entrypoint.sh vault server -config=/tmp/vault.hcl
        ports:
        - containerPort: 8200
          name: http
          protocol: TCP
        - containerPort: 8201
          name: https-internal
          protocol: TCP
        - containerPort: 8202
          name: http-rep
          protocol: TCP
        readinessProbe:
          exec:
            command: ["/bin/sh", "-ec", "vault status -tls-skip-verify"]
          failureThreshold: 2
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 3
        livenessProbe:
          exec:
            command: ["/bin/sh", "-ec", "vault status -tls-skip-verify"]
          failureThreshold: 2
          initialDelaySeconds: 60
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 3
        resources:
          requests:
            memory: 256Mi
            cpu: 250m
          limits:
            memory: 512Mi
            cpu: 500m
        securityContext:
          allowPrivilegeEscalation: false
        volumeMounts:
        - name: config
          mountPath: /vault/config
        - name: home
          mountPath: /home/vault
      volumes:
      - name: config
        configMap:
          name: vault-config
      - name: home
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: security
spec:
  ports:
  - name: http
    port: 8200
    protocol: TCP
    targetPort: 8200
  - name: https-internal
    port: 8201
    protocol: TCP
    targetPort: 8201
  selector:
    app: vault
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: vault-headless
  namespace: security
spec:
  clusterIP: None
  ports:
  - name: http
    port: 8200
    protocol: TCP
    targetPort: 8200
  - name: https-internal
    port: 8201
    protocol: TCP
    targetPort: 8201
  selector:
    app: vault
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vault-vs
  namespace: security
spec:
  hosts:
  - vault.ecommerce.com
  gateways:
  - istio-system/ecommerce-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: vault.security.svc.cluster.local
        port:
          number: 8200
